--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -141,7 +141,7 @@
  AVA_british_research_university:0 "British Research University"
  AVA_british_research_university_desc:0 "Our population is sorely uneducated and illiterate, but by sending our best and brightest minds to learn from the British, we may be able to change that quite quickly."
  AVA_muzumdar_house:0 "Victory for Roya"
- AVA_muzumdar_house_desc:0 "'Roya, the heiress apparent to the throne, has secured victory over the interlopers that have tried to steal the crown away from her. Using her naval forces and superior artillery, she has secured the surrender of her brother, the Houses, and many of the socialists. With our true Monarch reigning, the only future for Avahya is bright. All hail the Shahbanu.'"
+ AVA_muzumdar_house_desc:0 "'Roya, the heiress apparent to the throne, has secured victory over the interlopers that have tried to steal the crown away from her. Using her naval forces and superior artillery, she has secured the surrender of her brothers, the Houses, and many of the socialists. With our true Monarch reigning, the only future for Avahya is bright. All hail the Shahbanu.'"
  AVA_purge_azadeh:0 "Purge House Azadeh"
  AVA_purge_azadeh_desc:0 "The Azadeh house was the main supporter of Parviz and his rebellion. Parviz is long gone, but many members of House Azadeh remain. We must rid the nation of them to ensure the stability of the monarchy."
  AVA_purge_edibam:0 "Purge House Edibam"
@@ -159,33 +159,33 @@
  AVA_break_cardinal_lease:0 "Break the Cardinal Lease"
  AVA_break_cardinal_lease_desc:0 "The Cardinal Islands have been held by foreign powers for too long! It is time to reclaim them by force if needed."
  AVA_second_war_fire_stone:0 "Reclaim the Mainland"
- AVA_second_war_fire_stone_desc:0 "The Mainland has been held by france ever since they decided to invade us in the 1870s, it is time for them to return it, either peacefully or by the sword."
+ AVA_second_war_fire_stone_desc:0 "The Mainland has been held by France ever since they decided to invade us in the 1870s. It is high time for them to return it, either peacefully or by the sword."
  AVA_demand_somalia:0 "Demand Somalia"
- AVA_demand_somalia_desc:0 "We created a colony in Somalia early in our history, the city of Durvhas was a good trading post and pitstop for passing ships, however as our economy tanked in the 1880s, Italy took it as an opportunity to take the city from us, its time for us to reclaim it and the surronding area, whether they want to give it to us or not."
+ AVA_demand_somalia_desc:0 "We created a colony in Somalia early in our history. The city of Durvhas was a good trading post and resupply point for passing ships, however as our economy tanked in the 1880s, Italy used the opportunity to take the city from us. It's time for us to reclaim it and the surrounding area, whether they want to return it to us or not."
  AVA_princess_of_persia:0 "Princess of Persia"
- AVA_princess_of_persia_desc:0 "It is finally time, we shall reclaim our homeland from the Muslim infidels, Persia is a Zoroastrian land, It is time for the world to remember what the Persian Empire once was."
+ AVA_princess_of_persia_desc:0 "It is finally time, we shall reclaim our homeland from the Muslim infidels. Persia is a Zoroastrian land! It is time for the world to remember what the Persian Empire once was."
  AVA_azadeh_house:0 "Azadeh Victory"
- AVA_azadeh_house_desc:0 "'In a daring move that has shocked militaries around the world, Parviz and the Azadeh house have emerged victorious from battle. Using paratroopers, Parviz made the bold move to paratroop onto the ships being used by Roya's forces, succeding in capturing most of them, the ensuing naval battle removed all of Roya's firepower swiftly, with some final daring maneuvers in the mountains and city, Roya has been captured and the majority of the house's leaders surrendered awaiting judgement. The only loose end that remains are the socialists."
+ AVA_azadeh_house_desc:0 "'In a daring move that has shocked militaries around the world, Parviz and the Azadeh house have emerged victorious from battle. Using paratroopers, Parviz made the bold move to paratroop onto the ships being used by Roya's forces, succeding in capturing most of them. The ensuing naval battle removed all of Roya's firepower swiftly. With some final daring maneuvers in the mountains and city Parviz's forces have captured Roya, while the majority of the house's surviving leaders surrendered awaiting judgement. The only loose end that remains are the socialists."
  AVA_purge_muzumdar:0 "Purge House Muzumdar"
- AVA_purge_muzumdar_desc:0 "The Muzumdar house were supporters of Roya, whilst some of them have exiled to Yohannia many still reside in the country, we need to get rid of them to ensure the saftey of the Shah"
+ AVA_purge_muzumdar_desc:0 "The Muzumdar house were supporters of Roya. While some of them have exiled to Yohannia, many still reside in the country. We need to get rid of them to ensure the saftey of the Shah."
  AVA_purge_edibam_m:0 "Purge House Edibam"
- AVA_purge_edibam_m_desc:0 "The Edibam house has a long history of being the mavericks of the houses, this is no more true than during the civil war, when they manipulated the 13 year old price Kamran to defy Parviz and Roya, leading to his death, the Edibam house must be culled for this heinous crime."
+ AVA_purge_edibam_m_desc:0 "The Edibam house has a long history of being mavericks - unpredictable and dangerous. This was never more true than during the civil war, when they manipulated the 13 year old price Kamran to defy Parviz and Roya, leading to his death. House Edibam house must be culled for this heinous crime."
  AVA_mazdakist_alternative:0 "The Mazdakist Alternative"
- AVA_mazdakist_alternative_desc:0 "The Mazdakists, a pacifist religon similar to Zoroastrianism has been adament on their neutrality in the civil war and how they refuse to fight for any regime. Whilst some hardliners suggest eliminating the Mazdakists, Parviz poses a more sane solution to instead have them work in industires instead of battlefields if war emerges."
+ AVA_mazdakist_alternative_desc:0 "The Mazdakists, a pacifist religon similar to Zoroastrianism, has been adamant about their neutrality during the civil war. Whilst some hardliners suggest eliminating the Mazdakists, Parviz poses a more sane solution - to instead have them work in industires instead of battlefields."
  AVA_monarchical_socialist_blend:0 "Monarchist-Socialist Blend"
- AVA_monarchical_socialist_blend_desc:0 "Despite our victory in the civil war, the socialists are still prominent in many of the cities. Whilst some hardliners want to root out the last of them, Parviz has declared that the socialists will be invited to discuss a possible compromise between us."
+ AVA_monarchical_socialist_blend_desc:0 "Despite our victory in the civil war, the socialists are still prominent in many of the cities. Whilst some hardliners want to root out the last of them, Parviz has declared that the socialists will be invited to discuss a possible compromise."
  AVA_paratoopers:0 "Train Paratroopers"
- AVA_paratoopers_desc:0 "Paratroopers were vital in victory for the civil war, and they will be vital in any war to come, we should invest further in their training"
+ AVA_paratoopers_desc:0 "Paratroopers were vital in victory for the civil war, and they will be vital in any war to come. We should invest further in their training."
  AVA_purchase_british_ship:0 "Purchase British Hulls"
- AVA_purchase_british_ship_desc:0 "Whilst our dockyards are running again, there is no way we can hope to meet the size of our pre-civil war navy. To the chargin of many, Parviz and many others have agreed to dicuss with the British to purchase some old hulls in return for exclusive trade deals.
+ AVA_purchase_british_ship_desc:0 "Our dockyards are running again, but there is no way we can hope to meet the size of our pre-civil war navy. To the chargin of many, Parviz and many others have agreed to dicuss with the British to purchase some old hulls in return for exclusive trade deals."
  AVA_parviz_general:0 "General Parviz"
- AVA_parviz_general_desc:0 "Parviz has come a long way since the war, he has won the hearts and minds of the people, and it is time for him to win the favor of the military. With tensions rising all around the world, Parviz has annouced that he is taking a more prominent role in military affairs.
+ AVA_parviz_general_desc:0 "Parviz has come a long way since the war; he has won the hearts and minds of the people, and it is time for him to win the favor of the military. With tensions rising all around the world, Parviz has annouced that he is taking a more prominent role in military affairs."
  AVA_female_aviators:0 "Female Aviators"
- AVA_female_aviators_desc:0 "There is no reason for women to hide at home. Our women are bold and strong, and they are just as capable at flying aircraft as any of our men. We will make use of our women to defend our nation!"
+ AVA_female_aviators_desc:0 "There is no reason for women to hide at home. Our women are bold and strong, and they are just as capable at flying aircraft as any of our men. We will make use of our women to defend the nation!"
  AVA_join_britain:0 "Ally with Britain"
- AVA_join_britain_desc:0 "The United Kingdom have always been one of our closest allies in europe, with the tension growing in Europe, and Avahya finally ready to get back into action, we may be able to ally with britian in return for the Cardinal Islands we leased to them in the 1870s"
+ AVA_join_britain_desc:0 "The United Kingdom have always been one of our closest allies in Europe. With the tension growing in Europe, and Avahya finally ready to get back into action, we may be able to secure a permanent alliance with Britian in return for the Cardinal Islands we leased to them in the 1870s."
  AVA_civilian_industry:0 "Civilian Industry"
- AVA_civilian_industry_desc:0 "We must expand our civilian industry if we are to be competetive in the world market and provide the goods our citizens need."
+ AVA_civilian_industry_desc:0 "We must expand our civilian industry if we are to be competitive in the world market and provide the goods our citizens need."
  AVA_military_industry:0 "Military Industry"
  AVA_military_industry_desc:0 "The defense of our nation requires a number of factory lines dedicated to the production of military goods."
  AVA_shipyard:0 "Construct Shipyards"
@@ -203,19 +203,19 @@
  AVA_panchaian_tungsten:0 "Panchaian Tungsten"
  AVA_panchaian_tungsten_desc:0 "All advanced technology requires this incrediby hard, incredibly heat resistant element: Tungsten."
  AVA_learning_civil_war:0 "Civil War Lessons"
- AVA_learning_civil_war_desc:0 "The Civil war has shown us the fallices and flaws of our military strategy and our army, we should work on reforming our military to improve our ability to keep the country safe"
+ AVA_learning_civil_war_desc:0 "The Civil war has shown us the fallacies and flaws of our military strategy and our army, we should work on reforming our military to improve our ability to keep the country safe."
  AVA_reform_army:0 "Reform the Army"
- AVA_reform_army_desc:0 "The Army After the Civil War is in tatters but has learned alot about warfare in its 3 year trial by fire."
+ AVA_reform_army_desc:0 "The Army is in tatters after the Civil War, but has learned alot about warfare in its 3 year trial by fire."
  AVA_firepower:0 "Firepower Focus"
- AVA_firepower_desc:0 "Rivetna's plan- General Arzhan Rivetna is an experienced general from the Great War, his plan of firepower over manpower should be adopted as our main doctrine"
+ AVA_firepower_desc:0 "Rivetna's plan- General Arzhan Rivetna is an experienced general from the Great War, his plan of firepower over manpower should be adopted as our main doctrine."
  AVA_infantry:0 "Infantry Advancements"
- AVA_infantry_desc:0 "Upgrade the Krag- The Krag–Jørgensen, better known in Avahya as the (A93) is a bolt action rifle in service in Avahya since 1893, It's become very outdated over the years, we should upgrade it to make it more effective in combat."
+ AVA_infantry_desc:0 "Upgrade the Krag- The Krag–Jørgensen, better known in Avahya as the (A93) is a bolt action rifle in service in Avahya since 1893, It's become very outdated over the years, we should upgrade it to make it more effective in combat."
  AVA_artillery:0 "Artillery Advancements"
- AVA_artillery_desc:0 "Rāste Āhengar has spent the better part of our civil war relatively unharmed and as such was abed to produce improvements to our Artilery unimpeeded"
+ AVA_artillery_desc:0 "Rāste Āhengar has spent the better part of our civil war relatively unharmed and as such was able to produce improvements to our artillery technology unimpeded."
  AVA_support:0 "Support Elements"
- AVA_support_desc:0 "Cirogamed Guild an Ancient company from 1547 receantly pivoted to the production of of Electrical Equiptment and shows promis with the masses, their Radio Equiptment is top notch in the company, it would be wise to aquire this modern equiptment for our armies"
+ AVA_support_desc:0 "Cirogamed Guild, an Ancient company from 1547, recently pivoted to the production of electrical equiptment and these products show promise with the masses. Their radio equiptment is world class. It would be wise to aquire this modern equiptment for our armies."
  AVA_blitzkrieg:0 "Blitzkrieg Tactics"
- AVA_blitzkrieg_desc:0 "Afsheri's plan- General Nimâ Afsheri is a relatively fresh face, but his exploits during the Civil war cannot go unnoticed, We should consider his plan of quick movements"
+ AVA_blitzkrieg_desc:0 "Afsheri's plan- General Nimâ Afsheri is a relatively fresh face, but his exploits during the Civil war cannot go unnoticed. We should consider his plan of quick movements."
  AVA_grand_plan:0 "Grand Plan"
  AVA_grand_plan_desc:0 "Rivetna's plan- General Arzhan Rivetna is an experienced general from the Great War, his plan of firepower over manpower has been modified to incorperate a much larger emphisas on crafting the perfect plans for our soldiers to follow."
  AVA_trucks:0 "Military Lorries"
