--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -207,7 +207,7 @@
  AVA_reform_army:0 "Reform the Army"
  AVA_reform_army_desc:0 "The Army is in tatters after the Civil War, but has learned alot about warfare in its 3 year trial by fire."
  AVA_firepower:0 "Firepower Focus"
- AVA_firepower_desc:0 "Rivetna's plan- General Arzhan Rivetna is an experienced general from the Great War, his plan of firepower over manpower should be adopted as our main doctrine."
+ AVA_firepower_desc:0 "Rivetna's plan- General Arzhan Rivetna is an experienced general from the Great War. His plan of firepower over manpower should be adopted as our main doctrine."
  AVA_infantry:0 "Infantry Advancements"
  AVA_infantry_desc:0 "Upgrade the Krag- The Krag–Jørgensen, better known in Avahya as the (A93) is a bolt action rifle in service in Avahya since 1893, It's become very outdated over the years, we should upgrade it to make it more effective in combat."
  AVA_artillery:0 "Artillery Advancements"
@@ -217,57 +217,57 @@
  AVA_blitzkrieg:0 "Blitzkrieg Tactics"
  AVA_blitzkrieg_desc:0 "Afsheri's plan- General Nimâ Afsheri is a relatively fresh face, but his exploits during the Civil war cannot go unnoticed. We should consider his plan of quick movements."
  AVA_grand_plan:0 "Grand Plan"
- AVA_grand_plan_desc:0 "Rivetna's plan- General Arzhan Rivetna is an experienced general from the Great War, his plan of firepower over manpower has been modified to incorperate a much larger emphisas on crafting the perfect plans for our soldiers to follow."
+ AVA_grand_plan_desc:0 "Rivetna's plan- General Arzhan Rivetna is an experienced general from the Great War. His plan of firepower over manpower has been modified to incorporate a much larger emphasis on crafting the perfect plans for our soldiers to follow."
  AVA_trucks:0 "Military Lorries"
- AVA_trucks_desc:0 "Oxiustig Motor Designs pride of the Avahyan Car industry, while not competitive on the global Markets a sense of pride of owning a domestic vehical is what keeps them in buisness, by requesting new military trucks it would surely bolster their finances."
+ AVA_trucks_desc:0 "Oxiustig Motor Designs is pride of the Avahyan automotive industry. While not competitive on the global market, a sense of pride of owning a domestic vehicle is what keeps them in buisness. By requesting production of new military lorries it would surely bolster their finances."
  AVA_tanks:0 "Tank Advancements"
- AVA_tanks_desc:0 "Oxiustig Motor Designs has returned with new tank designs evolved from the Old British LAndship, we should put them to good use!"
+ AVA_tanks_desc:0 "Oxiustig Motor Designs has returned with new tank designs evolved from the old British Landship. We should put them to good use!"
  AVA_trains:0 "Trains"
- AVA_trains_desc:0 "Ayoxdyun Rail Company has requested several loans to repair our vart rail and streat car networks, we should accept their loan request if we wish to salvage our home situation"
+ AVA_trains_desc:0 "Ayoxdyun Rail Company has requested several loans to repair our heavy rail and street car networks. We should accept their loan request if we wish to salvage our domestic rail situation."
  AVA_spec_ops:0 "Special Operations"
- AVA_spec_ops_desc:0 "The height of our spec ops during the civil war need to be formalized into our military. Its the surefire way to "
+ AVA_spec_ops_desc:0 "The height of our special operations during the civil war showed us the importance of formalizing special operations forces as part of our military."
  AVA_reform_navy:0 "Naval Reforms"
- AVA_reform_navy_desc:0 "Much of our navy was destroyed or damaged in the civil war, we need to rebuild our naval fleet in order to protect our waters and prevent any of our enemies from landing soldiers on our shores."
+ AVA_reform_navy_desc:0 "Much of our navy was destroyed or damaged in the civil war. We need to rebuild our naval fleet in order to protect our waters and prevent any of our enemies from landing soldiers on our shores."
  AVA_purchase_british_ships:0 "Purchase British Ships"
- AVA_purchase_british_ships_desc:0 "We can never hope to meet the stopgap created by the civil war, luckily the British have many old ships, perhaps we can purchace some from them to jumpstart our attempts."
+ AVA_purchase_british_ships_desc:0 "We are sorely in need of hulls due to the losses from the civil war. Luckily, the British have many old but still quite serviceable ships, perhaps we can purchase some from them."
  AVA_fleet_being:0 "Fleet in Being Doctrine"
- AVA_fleet_being_desc:0 "Having a large fleet is imposing, having the largest guns is powerful. By combining these two ideas, we can create a navy that the entire Lemurian ocean will fear."
+ AVA_fleet_being_desc:0 "Having a large fleet is imposing. Having the largest guns is powerful. By combining these two ideas, we can create a navy that the entire Lemurian ocean will fear and obey."
  AVA_destroyer:0 "Destroyer Focus"
  AVA_destroyer_desc:0 "Destroyers are the backbone of any fleet, being multirole ships capable of just about anything we need. We should invest in them to ensure our larger ships can be well defended."
  AVA_battleship:0 "Battleship Focus"
- AVA_battleship_desc:0 "Some in command say Battleships are becoming outdated, but in the Lemurian ocean the largest fleets only consist of cruisers, having Battleships will put the power of the region back into our hands."
+ AVA_battleship_desc:0 "Some in command say battleships are becoming outdated, but in the Lemurian Ocean the largest fleets only consist of cruisers. Having battleships will put the balance of power in the region back into our hands."
  AVA_purchase_american_ships:0 "Purchase American Ships"
- AVA_purchase_american_ships_desc:0 "America has many old ships they wish to retire, we should purchase them so they dont go to waste."
+ AVA_purchase_american_ships_desc:0 "America has many old but still powerful ships they wish to retire. We should purchase them so they don't go to waste."
  AVA_base_strike:0 "Base Strike Doctrine"
- AVA_base_strike_desc:0 "The future is naval combat is not on the sea but in the air, we must invest in carriers and carrier planes to destroy our enemies' before they even leave their ports."
+ AVA_base_strike_desc:0 "The future of naval combat is not on the sea but in the air. We must invest in carriers and carrier planes to destroy our enemies before they even leave their ports."
  AVA_battlecruiser:0 "Battlecruiser Focus"
  AVA_battlecruiser_desc:0 "A majestic combination of hulking battleships and agile cruisers, battlecruisers may serve a niche role, but they can be wonderful for fleets that may not need a battleship but still need a larger vessel."
- AVA_carrier:0 " First Carrier Experiments"
- AVA_carrier_desc:0 "Our air force has shown to be a very useful portion of our armed forces, by giving our Naval forces the ability to strike targets from above we could improve their ability to fight."
+ AVA_carrier:0 "First Carrier Experiments"
+ AVA_carrier_desc:0 "Our air force has shown to be a very useful portion of our armed forces. By giving our naval forces the ability to strike targets from above we could improve their ability to fight."
  AVA_purchase_italian_ships:0 "Purchase Italian Ships"
- AVA_purchase_italian_ships_desc:0 "Italy has produced many ships since the"
+ AVA_purchase_italian_ships_desc:0 "Italy has produced many ships, but is struggling to maintain and utilize these extra hulls. We should purchase some of these extra ships to bolster our own fleet."
  AVA_trade_war:0 "Trade War Doctrine"
- AVA_trade_war_desc:0 "The Lemurian ocean is vital in global trade, by investing in small, fast fleets we can catch enemy ships off gaurd and destroy them, starving our enemies no matter how far they are."
+ AVA_trade_war_desc:0 "The Lemurian Ocean is vital in global trade. By investing in small, fast fleets we can catch enemy ships off guard and destroy them, thus starving our enemies no matter how far away they may be."
  AVA_cruiser:0 "Cruiser Focus"
- AVA_cruiser_desc:0 "Cruisers are a vital part of any naval fleet big or small, they are large enough to hold their own in combat and small enough to retreat if needed, investing in them will help us strike enemies with minimal losses."
+ AVA_cruiser_desc:0 "Cruisers are a vital part of any naval fleet big or small. They are large enough to hold their own in combat and small enough to be nimble and difficult to hit. Investing in them will help us strike enemies with minimal losses."
  AVA_submarine:0 "Submarine Focus"
- AVA_submarine_desc:0 "The ability to hide and attack our enemies from the shadows is a great advantage in sea warfare, investing in these submarines will help us defend our fleets and destroy others."
+ AVA_submarine_desc:0 "The ability to hide and attack our enemies from the shadows is a great advantage in sea warfare. Investing in these submarines will help us defend our fleets and destroy others."
  AVA_reform_air:0 "Reform Air Force"
- AVA_reform_air_desc:0 "Many in military high command feel that wars will no longer be won with the size our naval ships or the manpower of our army, but by the support of the airforce. We should take into consideration what they said and make sure our air force is ready to keep our other forces safe."
+ AVA_reform_air_desc:0 "Many in military high command feel that wars will no longer be won with the size our naval ships or the manpower of our army, but by the support of the air force. We should take into consideration what they claim and make sure our air force is ready to keep our other forces safe from threats in the sky."
  AVA_strategic_destruction:0 "Strategic Destruction"
- AVA_strategic_destruction_desc:0 "Destroying the enemy completly is the best way to ensure they wont be able to fight in a war with us, by targeting their cities and infastructure we can knock them out of the war without ever having to step foot on their land."
+ AVA_strategic_destruction_desc:0 "Destroying the enemy completely is the best way to ensure they won't be able to fight in a protracted war with us. By targeting their cities and infastructure we can knock them out of the war without ever having to step foot on their land."
  AVA_battlefield_support:0 "Battlefield Support"
- AVA_battlefield_support_desc:0 "Whilst the airforce may be essential in winning future conflicts, our army is still needed on the ground to engage the enemy directly, we should focus our air force on supporting our boots on the ground."
+ AVA_battlefield_support_desc:0 "While the airforce may be essential in winning future conflicts, our army is still needed on the ground to engage the enemy directly. We should focus our air force on supporting our boots on the ground."
  AVA_operational_integrity:0 "Operational Integrity"
  AVA_operational_integrity_desc:0 "Our focus in the air should be on grinding down the enemy forces with copious amounts of high explosives from above."
  AVA_large_aircraft:0 "Large Airframe Focus"
- AVA_large_aircraft_desc:0 "Skenpihr Aviation has begun further research into Bomber Airframes."
+ AVA_large_aircraft_desc:0 "Skenpihr Aviation has begun further research into bomber airframes."
  AVA_efficient_engines:0 "Efficient Engines"
- AVA_efficient_engines_desc:0 "Improvements in our precision have allowed for much better and efficient engines."
+ AVA_efficient_engines_desc:0 "Improvements in our precision have allowed for much better and more efficient engines."
  AVA_larger_guns:0 "Larger Aircraft Armaments"
  AVA_larger_guns_desc:0 "The bullets in our aircraft are too small we must increase the size to at the very minimum of 20mm rounds to effectivly pierce lightly armored targets on the ground and in the sky"
  AVA_medium_aircraft:0 "Medium Airframe Focus"
- AVA_medium_aircraft_desc:0 "Skenpihr Aviation has begun further research into Medium Sized Airframes"
+ AVA_medium_aircraft_desc:0 "Skenpihr Aviation has begun further research into medium-sized airframes"
  AVA_small_aircraft:0 "Small Airframe Focus"
- AVA_small_aircraft_desc:0 "Skenpihr Aviation has begun further research into Fighter Airframes"
+ AVA_small_aircraft_desc:0 "Skenpihr Aviation has begun further research into fighter airframes"
  
