--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -155,7 +155,7 @@
  AVA_yohannian_assist:0 "Request Yohannian Assistance"
  AVA_yohannian_assist_desc:0 "Roya visisted Yohannia when she was young as an ambassador, Yohannia has shown to be a worthy nation, and despite their muslim minority it could be worth allying with them and requesting their assistance in the coming conflicts"
  AVA_marines:0 "Train Marines"
- AVA_marines_desc:0 "If we are to reclaim our lost lands, we must make sure we have skilled amphibious landing troops. Parviz wanted to rely on paratroopers, however they have proven unreliable and inefficent. We shall return to our roots and train marines.
+ AVA_marines_desc:0 "If we are to reclaim our lost lands, we must make sure we have skilled amphibious landing troops. Parviz wanted to rely on paratroopers, however they have proven unreliable and inefficent. We shall return to our roots and train marines."
  AVA_break_cardinal_lease:0 "Break the Cardinal Lease"
  AVA_break_cardinal_lease_desc:0 "The Cardinal Islands have been held by foreign powers for too long! It is time to reclaim them by force if needed."
  AVA_second_war_fire_stone:0 "Reclaim the Mainland"
