--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -99,7 +99,7 @@
  AVA_worker_victory:0 "The Workers' Victory"
  AVA_worker_victory_desc:0 "'Using their superior manpower, the socialists have broken the shackles of the monarchy and aristrocracy that has held them down for so long. This victory is sure to bring many changes to the country we know. Whilst pockets of resistance remain, the Socialists have the numerical majority, and these pockets are sure to fall eventually.'"
  AVA_worker_councils:0 "Workers' Councils"
- AVA_worker_councils_desc:0 "In order to ensure long term stability and workers right, unions and workers councils will be avaliable to all workers, allowing for workers to make the decisions that affect them directly, instead of letting the arsitocrats make decisions that only beneifit themselves.
+ AVA_worker_councils_desc:0 "In order to ensure long term stability and workers right, unions and workers councils will be avaliable to all workers, allowing for workers to make the decisions that affect them directly, instead of letting the arsitocrats make decisions that only beneifit themselves."
  AVA_mainland_bound:0 "Reclaim Lemurian Posessions"
  AVA_mainland_bound_desc:0 "The Mainland has long been a historical part of Avahya which the French took away from us. We will demand its return diplomatically, and invade if they leave us no other choice."
  AVA_pantiyan_tigers:0 "Pantiyan Tigers"
