--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -94,6 +94,8 @@
  ava.14.d:0 "France's refusal to hand over the mainland will only delay the plans - Persia will return to us. But first, our own lands here must be brought back within the fold! Sixty long years ago they attacked us. France will pay in blood, sweat and tears as their empire turns to dust!" #OI WRITE SHIT
  ava.14.a:0 "Nothing a little violence can't solve!"
  
+ AVA_parviz_bcomes_a_leader:0 "Parviz becomes A general"
+ AVA_Roya_runs_to_Yohannia:0 "Roya runs to yohannia and becomes a general there"
  AVA_conflicting_reports:0 "Conflicting Reports"
  AVA_conflicting_reports_desc:0 "'The Civil War has been raging for almost 3 years between the Socialists, Conservatives, Loyalists, and Nationalists. Fighting has encroached on the capital city. The battle for the capital has been raging on for months now, and with conflicting reports coming in across the country, it seems the true victor is...'"
  AVA_worker_victory:0 "The Workers' Victory"
