--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -12,6 +12,10 @@
 
 #advisors
  AVA_backroom_backstabber:0 "Pouyan Bhaagalia"
+ AVA_anti_communist_crusader:0 "Shahriar Pourbahrami"
+ AVA_economist:0 "Aron Nadiwala"
+ AVA_editor:0 "Balash Aamin"
+ AVA_armaments_organizer:0 "Nami Chaarania"
  AVA_communist_revolutionary:0 "Adorbad Nagla"
  AVA_democratic_reformer:0 "Arman Jahanbakshi"
  AVA_fascist_demagogue:0 "Ferdows Subedar"
