--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -42,7 +42,20 @@
  PRJ_air_naval_strike_1:0 "Suda Maniakes"
  PRJ_navy_carrier_2:0 "Michael Bardanes"
 
-
+#Designers
+ zecharus_motors_tank:0 "Zecharus Motors"
+ birika_motors_corporation:0 "Birika Motor Corporation"
+ gyrtemoica:0 "Gyrtemoica"
+ fenixal:0 "Fenixal"
+ gersha:0 "Gersha"
+ tonmagar:0 "Tonmagar"
+ malipta_arms:0 "Malipta Arms"
+ zecharus_motors:0 "Zecharus Motors"
+ vehenian_canons:0 "Vehenian Canons"
+ turkana_petrochemicals:0 "Turkana Petrochemicals"
+ cirno_electronics:0 "Cirno Electronics"
+ twivela_construction_company:0 "Twivela Construction Company"
+ 
  PRJ_roderiq_bcomes_a_leader:0 "§tKing Roderiq becomes a Field Marshal§"
  #ideas
  PRJ_spy_defense:0 "Royal Eye"
