--- a/localisation/AVA_l_english.yml
+++ b/localisation/AVA_l_english.yml
@@ -15,6 +15,7 @@
  AVA_anti_communist_crusader:0 "Shahriar Pourbahrami"
  AVA_economist:0 "Aron Nadiwala"
  AVA_editor:0 "Balash Aamin"
+ AVA_war_industrialist:0 "Payam Dara"
  AVA_armaments_organizer:0 "Nami Chaarania"
  AVA_communist_revolutionary:0 "Adorbad Nagla"
  AVA_democratic_reformer:0 "Arman Jahanbakshi"
