--- a/localisation/aml_adjaceencies_l_english.yml
+++ b/localisation/aml_adjaceencies_l_english.yml
@@ -7,3 +7,4 @@
  Bonneville_strait:0 "Bonneville Strait" #Anthabaska
  nelson_strait:0 "Nelsons Pass" #Fort Nelson
  silver_gate_bridge:0 "Silver Gate Bridge" #Lincoln to Washington
+ kolpo_strait:0 "Kolpo Strait #Kolpo
