--- a/localisation/replace/aml_state_names_l_english.yml
+++ b/localisation/replace/aml_state_names_l_english.yml
@@ -349,6 +349,6 @@
  STATE_1247:0 "Salah al-Din"
  STATE_1248:0 "Q'umirmayu"
  STATE_1249:0 "Muru"
- STATE_1250:0 "Namruj"
+ STATE_1250:0 "Ahsan"
  STATE_1251:0 "Parez"
- STATE_1252:0 "Veman"
+ STATE_1252:0 "Namruj"
