--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -123,9 +123,11 @@
  VICTORY_POINTS_16409:0 "New Ishdagahl"
  VICTORY_POINTS_16417:0 "Sumephon"
  VICTORY_POINTS_16413:0 "Zacha"
- VICTORY_POINTS_16536:0 "name"
- VICTORY_POINTS_16546:0 "name"
- VICTORY_POINTS_16525:0 "name"
+ VICTORY_POINTS_16536:0 "New Kešivu"
+ VICTORY_POINTS_16546:0 "Miash"
+ VICTORY_POINTS_16525:0 "Kāmša"
+ VICTORY_POINTS_16528:0 "Cirogamed"
+ VICTORY_POINTS_16517:0 "Meru"
 #Mu
  VICTORY_POINTS_14748:0 "Vaalelemalolo"
  VICTORY_POINTS_14745:0 "Kororareka"
