--- a/localisation/replace/aml_state_names_l_english.yml
+++ b/localisation/replace/aml_state_names_l_english.yml
@@ -9,10 +9,10 @@
  STATE_875:0 "Chirikov Island"
  STATE_1253:0 "Uiqaqtel"
  STATE_1254:0 "Canaje"
- STATE_1255: "Nocal"
+ STATE_1255:0 "Nocal"
  STATE_1256:0 "Williamskust"
  STATE_1257:0 "Oranjestaat"
- STATE_1258:0 "Pogui"
+ STATE_1258:0 "South Thule"
  STATE_1259:0 "Zamalha"
  STATE_1260:0 "Minas do Imperador"
  STATE_1261:0 "Tauri"
