--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1103,7 +1103,7 @@
  NHL_communism_ADJ:0 "Nahlian"
  NHL_monarchism_ADJ:0 "Nahlian"
  CLM_fascism:0 "Nation of Lemuria"
- CLM_fascism_DEF:0 "The Nation of Lemuria"
+ CLM_fascism_DEF:0 "the Nation of Lemuria"
  CLM_democratic:0 "Commonwealth of Lemuria"
  CLM_democratic_DEF:0 "The Commonwealth of Lemuria"
  CLM_neutrality:0 "Commonwealth of Lemuria"
