--- a/localisation/aml_ideas_l_english.yml
+++ b/localisation/aml_ideas_l_english.yml
@@ -61,11 +61,11 @@
  better_imperial_garrison: "Imperial Garrison"
  better_imperial_garrison_desc: "The Imperial Garrison is the oldest barrier of defense in BL, they've served to protect the people since the early days of settlement and being a member of the I.G. is a big honour within BL society."
  markusthomson: "Markus Thomson"
- BLM_fascist_politician: "Paul Edward"
- BLM_peterssen: "John Peterssen"
- BLM_communist_politician: "Thomas Campbell"
- BLM_democratic_politician: "Johnston Kennedy Miller"
- BLM_loyalist_politician: "Johnson White"
+ CLM_fascist_politician: "Paul Edward"
+ CLM_peterssen: "John Peterssen"
+ CLM_communist_politician: "Thomas Campbell"
+ CLM_democratic_politician: "Johnston Kennedy Miller"
+ CLM_loyalist_politician: "Johnson White"
  equal_peoples: "Equal Peoples"
  equal_peoples_desc: "Now all men and women are legally equal, none hold a special status in the eyes of the government when they're born and they don't hold special powers."
  payingbritainback: "British Payments"
