--- a/localisation/aml_parties_l_english.yml
+++ b/localisation/aml_parties_l_english.yml
@@ -105,14 +105,14 @@
  THU_monarchism_party:0 "Konungsflokkur"
  THU_mandalism_party:0 "No Representation"
  THU_islamism_party:0 "No Representation"
- BLM_communism_party:0 "Lemurian Workers Party"
- BLM_neutrality_party_long:0 "The Queens Royal Party of British Lemuria"
- BLM_neutrality_party:0 "TQRPBL"
- BLM_democratic_party:0 "High Tory Party"
- BLM_fascism_party:0 "Anglish Union Party"
- BLM_monarchism_party:0 "Royal Home Rule Party"
- BLM_islamism_party:0 "Lemurian-Islamic Unity Party"
- BLM_mandalism_party:0 "No Representation"
+ CLM_communism_party:0 "Lemurian Workers Party"
+ CLM_neutrality_party_long:0 "The Queens Royal Party of British Lemuria"
+ CLM_neutrality_party:0 "TQRPBL"
+ CLM_democratic_party:0 "High Tory Party"
+ CLM_fascism_party:0 "Anglish Union Party"
+ CLM_monarchism_party:0 "Royal Home Rule Party"
+ CLM_islamism_party:0 "Lemurian-Islamic Unity Party"
+ CLM_mandalism_party:0 "No Representation"
  KUM_democratic_party:0 "Liberal Democratic Party"
  KUM_neutrality_party:0 "Kumari Prosperity Party"
  KUM_communism_party:0 "Communist Party of Kumari"
